Multiple language support plus code execution added

--- a/app/static/js/style.css
+++ b/app/static/js/style.css
@@ -21,6 +21,11 @@ body {
   width: 100%;
   resize: none;
 }
+.output-box {
+  height: 50%;
+  width: 100%;
+  resize: none;
+}
 
 .message-box {
   width: 100%;
