Synchronous language change added

--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -28,8 +28,8 @@
       <input id="submit" type="button" value="Send">
       <input id="leave" type="button" value="Leave">
       <input id="run" type="button" value="Run">
-      
-      <label for="cars">Language:</label>
+
+      <label for="language">Language:</label>
       <select id="language">
         <option value="cpp">C++</option>
         <option value="c">C</option>
@@ -37,12 +37,8 @@
       </select>
 
       <textarea class="output-box" id="output-text"></textarea><br>
-      
+
     </div>
-
-
-
-
   </div>
 
 
