--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -19,8 +19,10 @@
 
   <div class="container">
     <div id="keystroke-detector">
-      <div id="editor">DEFAULT</div>
+      <div id="editor"></div>
     </div>
+
+
 
     <div>
       <textarea class="messages" id="chat-text"></textarea><br>
@@ -37,6 +39,7 @@
       </select>
 
       <textarea class="output-box" id="output-text"></textarea><br>
+      <textarea class="input-box" id="input-text"></textarea><br>
 
     </div>
   </div>
