--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -8,49 +8,44 @@
 
   {% load static %}
 
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static '/js/style.css' %}">
-  </link>
+  <link rel="stylesheet" href="{% static '/css/main.css' %}">
+
+  <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 
   <title>RT Chat</title>
 
 </head>
 
 <body>
+  <nav>
+    <h1 class="navbar-title">RT Chat</h1>
+    <h2 class="navbar-name">Name</h2>
+    <h2 class="room-id">Room ID</h2>
+    <input id="leave" class="leave-nav" type="button" value="Leave">
+  </nav>
 
-  <div class="container">
-    <div id="keystroke-detector">
+  <section class="wrapper">
+
+    <div class="container">
       <div id="editor"></div>
     </div>
 
-
-
-    <div>
+    <div class="message-container">
       <textarea class="messages" id="chat-text"></textarea><br>
-      <input class="message-box" id="input" type="text"><br>
-      <input id="submit" type="button" value="Send">
-      <input id="leave" type="button" value="Leave">
-      <input id="run" type="button" value="Run">
-
-      <label for="language">Language:</label>
-      <select id="language">
-        <option value="cpp">C++</option>
-        <option value="c">C</option>
-        <option value="python">Python 3</option>
-      </select>
-
-      <textarea class="output-box" id="output-text"></textarea><br>
-      <textarea class="input-box" id="input-text"></textarea><br>
-
+      <div class="send">
+        <input class="message-box" id="input" type="text"><br>
+        <input id="submit" type="button" value="Send">
+      </div>
     </div>
-  </div>
+
+  </section>
 
 
   {{ room_name|json_script:"room-name" }}
   {{ user_name|json_script:"user-name" }}
 
-  <script src="{% static '/js/ace.js' %}" type="text/javascript" charset="utf-8"></script>
-  <script src="{% static '/js/ext-language_tools.js' %}" type="text/javascript" charset="utf-8"></script>
-  <script src="{% static '/js/mode-javascript.js' %}" type="text/javascript" charset="utf-8"></script>
 
   <script src="{% static '/js/client.js' %}" type="text/javascript"></script>
 
