--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,121 +1,99 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
-html,
-body {
-  height: 100%;
-  overflow-x: none;
-  background: #fef9ef;
-  font-family: "Poppins", sans-serif;
-}
-* {
-  padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
   margin: 0;
-  box-sizing: border-box;
-  color: #494947;
-}
-button,
-input[type="submit"],
-input[type="button"] {
-  background: none;
-  color: inherit;
-  border: none;
   padding: 0;
-  font: inherit;
-  cursor: pointer;
-  outline: inherit;
 }
 
-nav {
+html{
+  font-size: 10px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+body{
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: auto 1fr;
+  grid-template-areas: 
+  "nav    nav"
+  "editor message"
+  ;
+  height: 94vh;
+}
+
+nav{
+  background-color: #64dd17;
+  grid-area: nav;
   display: flex;
-  justify-content: space-between;
-  padding: 1.3% 0;
-  background: #ffcb77;
-  box-shadow: 0px 1px 2px #494947;
-  margin-bottom: 4px;
-}
-.navbar-title {
-  margin-left: 1%;
-  font-size: 26px;
-}
-.room-id,
-.navbar-name {
-  font-size: 24px;
-}
-.leave-nav {
-  margin-right: 1%;
+  align-items: center;
+  justify-content: space-around;
+  padding: 1rem;
+  font-size: 1.5rem;
 }
 
-
-#editor {
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-}
-.wrapper {
-  display: flex;
-  justify-content: space-between;
-  height: 100%;
-  width: 99%;
-  margin: 0 1%;
-}
-
-.container {
-  height: 100%;
-  width: 100%;
-}
-.container:nth-child(2) {
-  padding-left: 1%;
-}
-
-.messages {
-  height: 50%;
-  width: 99%;
-  resize: none;
-  font-size: 16px;
-}
-
-.send {
-  display: flex;
-  justify-content: space-between;
-  width: 99%;
-  padding: 1% 0;
-}
-.message-box {
-  width: 90%;
-  margin-right: 1%;
-}
-#submit {
-  width: 8%;
-}
-.output-box,
-.input-box {
-  width: 100%;
-  height: 20%;
-  resize: none;
-  font-family: monospace;
-  margin-bottom: 5%;
-}
-
-input[type="text"] {
-  padding: 8px;
-  border-radius: 16px;
-}
-input[type="button"] {
-  padding: 8px;
-  border-radius: 20px;
-  background-color: #6ab547;
-  color: #fef9ef;
-  border: 1px solid #a69cac;
-}
-input[type="button"]:hover {
-  transform: translateY(-3px);
-}
-
-input,
-textarea {
-  font-family: "Poppins", sans-serif;
-  padding: 8px;
+.editor-container{
+  grid-area: editor;
+  max-width: 66vw;
 }
 
 .message-container{
-  display: none;
+  display: grid;
+  grid-template-rows: 90% 10%;
+  grid-area: message;
+  padding: 1rem;
 }
+
+#chat-text{
+  resize: none;
+  height: 100%;
+  border:1px solid black;
+  padding: 0.5rem;
+  border-radius: 1rem;
+  font-size: 1.5rem;
+}
+
+.send{
+  margin-top: 1rem;
+  padding: 1rem 0;
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+  grid-gap:1rem
+}
+
+#message-box{
+  border-radius: 1rem;
+  padding: 1rem;
+  border: 1px solid rgb(66, 65, 65);
+}
+
+#submit{
+  padding: 1rem;
+  background-color: #64dd17;
+  color: white;
+  border: none;
+  font-size: 1.5rem;
+  border-radius: 1rem;
+  font-weight: 500;
+}
+
+#icon{
+  font-size:3rem;
+}
+
+#chat{
+  background-color:#64dd17;
+  border: none;
+}
+
+#leave{
+  background-color: #E44235;
+  border: none;
+  padding: 0.7rem;
+  display: flex;
+  align-items: center;
+  border-radius: 1rem;
+}
+
+
+
+
