--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -2,54 +2,49 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   {% load static %}
 
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-  <link rel="stylesheet" href="{% static '/js/style.css' %}">
-  <link rel="stylesheet" href="{% static '/css/main.css' %}">
+  <link rel="stylesheet" href="{% static 'css/main.css' %}">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 
   <title>RT Chat</title>
+
+  {{ room_name|json_script:"room-name" }}
+  {{ user_name|json_script:"user-name" }}
 
 </head>
 
 <body>
   <nav>
     <h1 class="navbar-title">RT Chat</h1>
-    <h2 class="navbar-name">Name</h2>
-    <h2 class="room-id">Room ID</h2>
-    <input id="leave" class="leave-nav" type="button" value="Leave">
+    <h2 class="navbar-name">{{ user_name }}</h2>
+    <h2 class="room-id">{{ room_name }}</h2>
+    <button id="chat"><i id="icon" class="material-icons">chat</i></button>
+    <button id="leave">
+      <i id="icon" class="material-icons">exit_to_app</i>
+      <h1>Leave</h1>
+    </button>
   </nav>
 
-  <section class="wrapper">
+  <div class="editor-container">
+    <div id="editor"></div>
+  </div>
 
-    <div class="container">
-      <div id="editor"></div>
+  <div class="message-container">
+    <div id="chat-text"></div>
+    <div class="send">
+      <input id="message-box" type="text">
+      <button id="submit">send</button>
     </div>
+  </div>
 
-    <div class="message-container">
-      <textarea class="messages" id="chat-text"></textarea><br>
-      <div class="send">
-        <input class="message-box" id="input" type="text"><br>
-        <input id="submit" type="button" value="Send">
-      </div>
-    </div>
-
-  </section>
-
-
-  {{ room_name|json_script:"room-name" }}
-  {{ user_name|json_script:"user-name" }}
-
-
-  <script src="{% static '/js/client.js' %}" type="text/javascript"></script>
-
-
+  <script src="{% static 'js/client.js' %}" type="text/javascript"></script>
 </body>
 
 </html>
