added persistent files with a database

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -85,6 +85,11 @@ nav{
   border: none;
 }
 
+#save{
+  background-color:#64dd17;
+  border: none;
+}
+
 #leave{
   background-color: #E44235;
   border: none;
