--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,8 @@
 <div>
-    <form action = "" method = "POST">
+    <form action="" method="POST">
         {% csrf_token %}
-        <label for="room_name">Room name: </label>
-        <input id="room_name" type="text" name="room_name">
-        <input type="submit" value="OK">
-        OR
-        <input type="submit" value="Create a room">
+        <label for="file_name">File name: </label>
+        <input id="file_name" type="text" name="file_name" required>
+        <input type="submit" value="Create a file">
     </form>
 </div>
