--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -15,17 +15,19 @@
 
   <title>RT Chat</title>
 
-  {{ room_name|json_script:"room-name" }}
+  {{ file_id|json_script:"file_id" }}
   {{ user_name|json_script:"user-name" }}
+  {{ content|json_script:"content" }}
 
 </head>
 
 <body>
   <nav>
-    <h1 class="navbar-title">RT Chat</h1>
+    <h1 class="navbar-title">Collab-edit</h1>
     <h2 class="navbar-name">{{ user_name }}</h2>
-    <h2 class="room-id">{{ room_name }}</h2>
+    <h2 class="room-id">{{ file_id }}</h2>
     <button id="chat"><i id="icon" class="material-icons">chat</i></button>
+    <button id="save"><i id="icon" class="material-icons">save</i></button>
     <button id="leave">
       <i id="icon" class="material-icons">exit_to_app</i>
       <h1>Leave</h1>
