--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -10,6 +10,7 @@
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 
@@ -22,32 +23,39 @@
 </head>
 
 <body>
-  <nav>
-    <div id="navbar-title">
-      <h1 class="navbar-title">Collab-edit</h1>
-    </div>
-    <div id="navbar-filename">
-      <h2 class="room-id">{{ filename }}</h2>
-    </div>
-    <div>
-      <button class="navbar-button" id="save"><i id="icon" class="material-icons">save</i></button>
-      <button class="navbar-button" id="chat"><i id="icon" class="material-icons">chat</i></button>
-    </div>
-  </nav>
+  <div class="wrapper">
+    <header>
+      <nav>
+        <h1 class="navbar-title">Collab-edit</h1>
+        <h2 class="room-id">{{ filename }}</h2>
+        <div>
+          <button class="navbar-button" id="save"><i class="material-icons">save</i></button>
+          <button class="navbar-button" id="chat"><i class="material-icons">chat</i></button>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <div class="editor-container">
+        <div id="editor"></div>
+      </div>
+      <div class="message-container">
+        <div id="chat-text"></div>
+        <div class="send-section">
+          <input id="message-box" type="text" placeholder="Type a message">
+          <button class="navbar-button" id="submit"><i id="icon" class="material-icons">send</i></button>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <h3>Made with 💛 by <a href="https://github.com/Swanand01" target="_blank">Swanand</a> & <a
+          href="https://github.com/chaitanya-Uike" target="_blank">Chaitanya</a> <span> <a
+            href="https://github.com/Swanand01/collab-code" target="_blank"><i class="fa fa-github"></i></a></span></h3>
 
-  <div class="editor-container">
-    <div id="editor"></div>
+    </footer>
   </div>
 
-  <div class="message-container">
-    <div id="chat-text"></div>
-    <div class="send">
-      <input id="message-box" type="text">
-      <button class="navbar-button" id="submit"><i id="icon" class="material-icons">send</i></button>
-    </div>
-  </div>
 
-  <script src="{% static 'js/client.js' %}" type="text/javascript"></script>
 </body>
+<script src="{% static 'js/client.js' %}" type="text/javascript"></script>
 
 </html>
