--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,13 +1,53 @@
-<div>
-    <form action="" method="POST">
-        {% csrf_token %}
-        <label for="file_name">File name: </label>
-        <input id="file_name" type="text" name="file_name" required>
-        <input type="submit" value="Create a file">
-    </form>
-    {% if documents %}
-    {% for document in documents %}
-    <a href="{% url 'room' document.document_id %}">{{ document.name }}</a>
-    {% endfor %}
-    {% endif %}
-</div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    {% load static %}
+
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <h1>Collab-edit</h1>
+            <h2>user name</h2>
+        </nav>
+    </header>
+    <div>
+        <div id="close-popup-container"></div>
+        <div class="create-file-popup">
+            <form action="" method="POST" class="form-container">
+                {% csrf_token %}
+                <h1>Create new file</h1>
+                <input id="file_name" type="text" name="file_name" required placeholder="Enter File Name">
+                <input id="submit-btn" type="submit" value="Create a file">
+            </form>
+        </div>
+
+        <div class="card-container">
+            <div id="addFile-btn" class="cards">
+                <i class="material-icons">add</i>
+            </div>
+            {% if documents %}
+            {% for document in documents %}
+
+            <div class="cards file-cards">
+                <i id="file-icon" class="material-icons">insert_drive_file
+                </i>
+                <a href="{% url 'room' document.document_id %}">{{ document.name }}</a>
+            </div>
+            {% endfor %}
+            {% endif %}
+        </div>
+    </div>
+</body>
+<script src="{% static 'js/index.js' %}" type="text/javascript"></script>
+
+</html>
