--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <h1>Collab-edit</h1>
-            <h2>user name</h2>
+            <h2>{{user_name}}</h2>
         </nav>
     </header>
     <div>
