--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -46,12 +46,10 @@
         </div>
       </div>
     </main>
-    <footer>
+    <!-- <footer>
       <h3>Made with 💛 by <a href="https://github.com/Swanand01" target="_blank">Swanand</a> & <a
-          href="https://github.com/chaitanya-Uike" target="_blank">Chaitanya</a> <span> <a
-            href="https://github.com/Swanand01/collab-code" target="_blank"><i class="fa fa-github"></i></a></span></h3>
-
-    </footer>
+          href="https://github.com/chaitanya-Uike" target="_blank">Chaitanya</a> </h3>
+    </footer> -->
   </div>
 
 
