--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -18,6 +19,9 @@
         <nav>
             <h1>Collab-edit</h1>
             <h2>{{user_name}}</h2>
+            <div id="github-btn">
+                <i class="fa fa-github"></i>
+            </div>
         </nav>
     </header>
     <div>
