--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -26,7 +26,7 @@ body{
 header{
   grid-area: header;
   background-color: #4d167d;
-  font-size: 1.2rem;
+  font-size: clamp(0.9rem, 1.5vw, 1.2rem);
 }
 
 nav{
@@ -48,6 +48,52 @@ nav{
 
 .navbar-title{
   cursor: pointer;
+}
+
+.rename-popup{
+    z-index: 9;
+    position: fixed;
+    right: 1rem;
+    top: 6rem;
+}
+
+#rename-popup-close{
+  color: black;
+  justify-self: end;
+  cursor: pointer;
+}
+
+#file_name{
+  width: 75%;
+  padding: 1rem;
+  font-size: 1.7rem;
+  border: none;
+  border-radius: 0.5rem;
+  background-color: #F0F0F0;
+  text-align: center;
+}
+
+#submit-btn{
+  width: 12rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color:#4d167d;
+  cursor: pointer;
+  color: white;
+}
+
+.form-container
+{
+    background-color: white;
+    display: none;
+    grid-template-rows: 1fr;
+    place-items: center;
+    grid-gap:1rem;
+    width: 20rem;
+    padding: 1rem 1rem 1.5rem 1rem;
+    border-radius: 1rem;
+    box-shadow: 1px 1px 43px -1px grey;
 }
 
 .navbar-button:hover {background-color: #dbd4d4}
