--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -26,15 +26,19 @@
     <header>
       <nav>
         <h1 class="navbar-title">Collab-edit</h1>
-        <!-- <h2 class="room-id">{{ filename }}</h2> -->
-        <form action="" method="POST" class="form-container">
-          {% csrf_token %}
-          <input type="text" name="file_name" id="file_name" value={{filename}}>
-          <input type="submit" value="Rename"/>
-        </form>
+        <h2 class="room-id">{{ filename }}</h2>
         <div>
+          <button class="navbar-button" id="rename"><i class="material-icons">edit</i></button>
           <button class="navbar-button" id="save"><i class="material-icons">save</i></button>
           <button class="navbar-button" id="chat"><i class="material-icons">chat</i></button>
+        </div>
+        <div class="rename-popup">
+          <form action="" method="POST" class="form-container">
+            {% csrf_token %}
+            <i id="rename-popup-close" class="material-icons">close</i>
+            <input type="text" name="file_name" id="file_name" maxlength="15" value={{filename}}>
+            <input type="submit" id="submit-btn" value="Rename" />
+          </form>
         </div>
       </nav>
     </header>
