Added gifs and changed title and proj name

--- a/app/templates/chatroom.html
+++ b/app/templates/chatroom.html
@@ -13,7 +13,7 @@
 
   <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 
-  <title>RT Chat</title>
+  <title>Collab Edit</title>
 
   {{ file_id|json_script:"file_id" }}
   {{ user_name|json_script:"user-name" }}
