--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -60,7 +60,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/polls">RT Chat</a>
+            <a class="navbar-brand" href="/polls">Collab Edit</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
